address easier ref comments in 4.1-2

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -3,7 +3,7 @@
 \chapter{Unstable Cooperations}\label{UnstableCooperationsChapter}
 
 
-In \Cref{StableContextLecture} (and more broadly in \Cref{ChapterFiniteSpectra}), we codified the structure of the stable \(E\)--cooperations acting on the \(E\)--homology of a spectrum \(X\), attached to it the \(E\)--Adams spectral sequence which approximates the stable homotopy groups \(\pi_* X\), and gave algebro-geometric descriptions of the stable cooperations for some typical spectra: \(\HFtwo\), \(MO\), and \(MU\).  We will now pursue a variation on this theme, where we consider the \(E\)--homology of a \emph{space} rather than of a generic spectrum.  In this Case Study, we will examine the theory of cooperations that arises from this set-up, called the \textit{unstable \(E\)--cooperations}.  This broader collection of cooperations has considerably more intricate structure than their stable counterparts, requiring the introduction of a new notion of an unstable context.  With that established, we will again find that \(E\)--homology assigns spaces to quasicoherent Cartesian sheaves over the unstable context, and we will again assemble an \emph{unstable} \(E\)--Adams spectral sequence approximating the \emph{unstable} homotopy groups of the input space, whose \(E^2\)--page in favorable situations is tracked by the cohomology of the sheaf over the unstable context.
+In \Cref{StableContextLecture} (and more broadly in \Cref{ChapterFiniteSpectra}), we codified the structure of the stable \(E\)--cooperations acting on the \(E\)--homology of a spectrum \(X\), attached to it the \(E\)--Adams spectral sequence which approximates the stable homotopy groups \(\pi_* X\), and gave algebro-geometric descriptions of the stable cooperations for some typical spectra: \(\HFtwo\), \(MO\), and \(MU\).  We will now pursue a variation on this theme, where we consider the \(E\)--homology of a \emph{space} rather than of a generic spectrum.  In this Case Study, we will examine the theory of cooperations that arises from this set-up, called the \textit{unstable \(E\)--cooperations}.  This broader collection of cooperations has considerably more intricate structure than their stable counterparts, requiring the introduction of a new notion of an unstable context.  With that established, we will again find that \(E\)--homology takes values in quasicoherent Cartesian sheaves over the unstable context, and we will again assemble an \emph{unstable} \(E\)--Adams spectral sequence approximating the \emph{unstable} homotopy groups of the input space, whose \(E^2\)--page in favorable situations is tracked by the cohomology of the sheaf over the unstable context.
 
 Remarkably, these unstable contexts also admit algebro-geometric interpretations.  In finding the right language for this, we introduce different subclasses of cooperations, and we are also naturally led to consider \textit{mixed cooperations} (as we did stably in \Cref{OrientationsOnEAndMU}) of the form \(F_* \OS{E}{*}\).  The running theme is that when \(E\) and \(F\) are complex-orientable, there is a natural approximation map \[\Spec Q^* F_* \OS{E}{*} \to \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E)\] which is an isomorphism in every situation of interest.  However, these isomorphisms do not appear to admit uniform proofs\footnote{The best uniform result I can find is due to Butowiez and Turner~\cite[Theorem 3.12]{ButowiezTurner}.}, so we instead investigate the following cases by hand:
 \begin{description}
@@ -64,18 +64,18 @@ The \index{descent!object!unstable}\textit{unstable descent object} is the cosim
 \cdots
 \end{tikzcd}
 \right\}.\]
-Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.\footnote{A reader seeking visual stimulation can find unstable analogues of \Cref{HF2ASSFigure} in \cite{BPS}.}  The simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad},\] and there is a preferred system of sheaves \(\omega^{n/2} = \Ucontext{E}(S^n)\).
+Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.\footnote{A reader seeking visual stimulation can find unstable analogues of \Cref{HF2ASSFigure} in \cite{BPS}.}  In the case that \(\pi_0 \sheaf{UD}_E(S^0)\) is even, the simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad},\] and there is a preferred system of sheaves \(\omega^{n/2} = \Ucontext{E}(S^n)\).
 \end{definition}
 
-The remainder of this Lecture will be spent trying to wrangle the information in \Cref{UASSDefinition}.  In the stable situation, we recognized that in favorable situations the homotopy groups of the descent object formed a cosimplicial module over a certain cosimplicial ring---or, equivalently, a \emph{Cartesian} sheaf over a certain simplicial scheme.  Furthermore, we found that the simplicial scheme itself had some arithmetic meaning, and that the \(E_2\)--page of the descent spectral sequence computed the cohomology of this sheaf.  We will find analogues of all of these results in the unstable setting, listed above in order from least to most difficult.
+The remainder of this Lecture will be spent trying to wrangle the information in \Cref{UASSDefinition}.  In the stable situation, we recognized that in favorable situations the homotopy groups of the descent object formed a cosimplicial module over a certain cosimplicial ring---or, equivalently, a \emph{Cartesian} sheaf over a certain simplicial scheme.  Furthermore, we found that the simplicial scheme itself had some arithmetic meaning, and that the \(E_2\)--page of the descent spectral sequence computed the cohomology of this sheaf.  We will find analogues of all of these results in the unstable setting, listed in order from least to most difficult.
 
-We would first like to recognize the cosimplicial abelian group \(\pi_0 \sheaf{UD}_E(X)\) as a sort of comodule.  In the stable case, this came from the smash product map \(\S^0 \sm X \to X\), as well as the lax monoidality of the functor \(\sheaf{D}_E(-)\).  However, to get a \index{Segal condition}Segal condition by which we could identify the higher-dimensional objects in \(\pi_0 \sheaf D_E(X)\), we had to introduce the condition \index{flatness hypothesis@flatness hypothesis, \FH}{\FH}.\footnote{In particular, {\FH} caused the marked map in \(E_0 X \xrightarrow{\eta_R} E_0(E \sm X) \xleftarrow{\star} E_0 E \otimes_{E_0} E_0 X\) to become invertible.}  The unstable situation has an analogous antecedent:
+We would first like to recognize the cosimplicial abelian group \(\pi_0 \sheaf{UD}_E(X)\) as a sort of comodule.  In the stable case, this came from the smash product map \(\S^0 \sm X \to X\), as well as the lax monoidality of the functor \(\sheaf{D}_E(-)\).  However, to get a \index{Segal condition}Segal condition by which we could identify the higher-dimensional objects in \(\pi_0 \sheaf D_E(X)\), we had to introduce the condition \index{flatness hypothesis@flatness hypothesis, \FH}{\FH}.\footnote{In particular, we used {\FH} to invert the marked map in \(E_0 X \xrightarrow{\eta_R} E_0(E \sm X) \xleftarrow{\star} E_0 E \otimes_{E_0} E_0 X\).}  The unstable situation has an analogous antecedent:
 
 \begin{definition}[{\cite[Assumption 6.5]{BCM}}]
-A ring spectrum \(E\) is said to satisfy the \index{flatness hypothesis@flatness hypothesis, \FH!unstable@unstable, \UFH}\textbf{U}nstable \textbf{F}reeness \textbf{H}ypothesis, or \UFH, if \(E_* \OS{E}{k}\) is a free and even \(E_*\)--module for every value of \(k\).\footnote{This helps us understand the following analogous zigzag: \[\pi_0 E(X) \xrightarrow{\eta_R} \pi_0 E(E(X)) \xleftarrow{\mu \circ 1} \pi_0 E(E(E(X))) \xleftarrow{\mathrm{compose}} \pi_m E(E(S^0)) \times \pi_0 E(X).\]}
+An even-periodic ring spectrum \(E\) is said to satisfy the \index{flatness hypothesis@flatness hypothesis, \FH!unstable@unstable, \UFH}\textbf{U}nstable \textbf{F}reeness \textbf{H}ypothesis, or \UFH, if \(E_0 \OS{E}{0}\) is a free and even \(E_0\)--module.\footnote{This helps us understand the following analogous zigzag: \[\pi_0 E(X) \xrightarrow{\eta_R} \pi_0 E(E(X)) \xleftarrow{\mu \circ 1} \pi_0 E(E(E(X))) \xleftarrow{\mathrm{compose}} \pi_0 E(E(S^0)) \times \pi_0 E(X).\]}
 \end{definition}
 
-Under this condition, we again turn to studying the structure of \(\sheaf{UD}_E(S^0)\).  If we had a Segal condition, we would expect the structure present to be determined by \(\pi_0 \sheaf{UD}_E(S^0)[j]\) for \(j \le 2\).  The data at \(j = 0\) is largely redundant: \[\pi_0 E(S^0) = \pi_0 \OS{E}{0} = E_0\] computes the coefficient ring of \(E\).  The data at \(j = 1\) consists of the homology groups of the the infinite loopspace associated to \(E\): \[\pi_0 E(E(S^0)) = E_0 \OS{E}{0}.\]  There are three pieces of structure present here: the augmentation map \[\eps\co E_0 \OS{E}{0} \to E_0(E) \to E_0\] and the left- and right-unit maps \(E_0 \to E_0 \OS{E}{0}\).  The assumption {\UFH} gives us a foothold on the case \(j = 2\): a choice of basis for \(E_0 \OS{E}{0}\) gives an unstable isomorphism \(E(E(S^0)) \simeq \prod_\ell \OS{E}{0}\), so that \(\pi_0 \sheaf{UD}_E(S^0)[2]\) splits as a tensor product of terms of the form \(E_0 \OS{E}{0}\).  Here, we find a lot of structure: the addition of cohomology classes is represented by a map \[\OS E 0 \times \OS E 0 \to \OS E 0,\] which on \(E\)--homology induces a map \[\ast\co E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] the multiplication of cohomology classes similarly induces a map \[\circ\co E_0 \OS{E}{0} \otimes E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] these are compatible with the images of unit classes \(0, 1 \in \pi_0 E\) under the left- and right-units specified above; there is an additive inverse map \[\chi\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\] compatible with the \(\ast\)--product and giving a skew-commutativity formula \[a \circ b = \chi(b \circ a);\] there is a diagonal map \[\Delta\co E_0 \OS{E}{0} \to E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0}\] induced by the diagonal map of the space $\OS{E}{0}$; the maps \(\chi\), \(\ast\), and \(\Delta\) imbue \(E_0 \OS{E}{0}\) with a Hopf algebra structure; and there is a distributivity condition pictured in \Cref{DistributivityDiagram} intertwining \(\ast\), \(\circ\), and \(\Delta\).\footnote{Analogous structure also appears for aperiodic ring spectra \(E\) satisfying a graded version of {\UFH}, and in that case tracking through the extra grading indices is actually helpful for deciphering what these maps ``feel'' like.}
+Under this condition, we again turn to studying the structure of \(\sheaf{UD}_E(S^0)\).  If we had a Segal condition, we would expect the structure present to be determined by \(\pi_0 \sheaf{UD}_E(S^0)[j]\) for \(j \le 2\).  The data at \(j = 0\) is largely redundant: \[\pi_0 E(S^0) = \pi_0 \OS{E}{0} = E_0\] computes the coefficient ring of \(E\).  The data at \(j = 1\) consists of the homology groups of the the infinite loopspace associated to \(E\): \[\pi_0 E(E(S^0)) = E_0 \OS{E}{0}.\]  There are three pieces of structure present here: the augmentation map \[\eps\co E_0 \OS{E}{0} \to E_0(E) \to E_0\] and the left- and right-unit maps \(E_0 \to E_0 \OS{E}{0}\).  The assumption {\UFH} gives us a foothold on the case \(j = 2\): a choice of basis \(B\) for \(E_0 \OS{E}{0}\) gives an isomorphism \[E(E(S^0)) \simeq {\prod_{\ell \in B}}' \OS{E}{0} := \colim_{\substack{F \subseteq B \\ \text{\(F\) finite}}} \prod_{\ell \in F} \OS{E}{0},\] so that \(\pi_0 \sheaf{UD}_E(S^0)[2]\) splits as a tensor product of terms of the form \(E_0 \OS{E}{0}\).  Here, we find a lot of structure: the addition of cohomology classes is represented by a map \[\OS E 0 \times \OS E 0 \to \OS E 0,\] which on \(E\)--homology induces a map \[\ast\co E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] the multiplication of cohomology classes similarly induces a map \[\circ\co E_0 \OS{E}{0} \otimes E_0 \OS{E}{0} \to E_0 \OS{E}{0};\] these are compatible with the images of unit classes \(0, 1 \in \pi_0 E\) under the left- and right-units specified above; there is an additive inverse map \[\chi\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\] compatible with the \(\ast\)--product;\footnote{When considering the graded analogue of Hopf rings, the \(\circ\)--product obeys a skew-commutativity formula: \(a \circ b = \chi^{|a| \cdot |b|}(b \circ a)\).} there is a diagonal map \[\Delta\co E_0 \OS{E}{0} \to E_0 \OS{E}{0} \otimes_{E_0} E_0 \OS{E}{0}\] induced by the diagonal map of the space $\OS{E}{0}$; the maps \(\chi\), \(\ast\), and \(\Delta\) imbue \(E_0 \OS{E}{0}\) with a Hopf algebra structure; and there is a distributivity condition pictured in \Cref{DistributivityDiagram} intertwining \(\ast\), \(\circ\), and \(\Delta\).\footnote{Analogous structure also appears for aperiodic ring spectra \(E\) satisfying a graded version of {\UFH}, and in that case tracking through the extra grading indices is actually helpful for deciphering what these maps ``feel'' like.}
 
 \begin{figure}
 \begin{center}
@@ -91,7 +91,7 @@ A \otimes_R (A \otimes_R A) \arrow{r}{1 \otimes \ast} \arrow{d}{\Delta \otimes (
 \end{figure}
 
 \begin{definition}[{\cite[Summary 10.46]{BJW}}]\label{HopfRingManualDefinition}
-A \idxentry{Hopf ring} is a module equipped with structure maps \(\eps\), \(\ast\), \(\circ\), \(\Delta\), and \(\chi\), as well as unit classes \([0]\) and \([1]\) for \(\ast\) and \(\circ\) respectively, subject to the axioms described above.\footnote{Equivalently, a Hopf ring is a ring object in the category of coalgebras.  This has the virtue of concision, but taking comodules as the base category does not seem to align with our perspective in the coming Lecture.}\footnote{There are a few more pieces of topological structure that Boardman--Johnson--Wilson call an \index{Hopf ring!enriched}\textit{enriched Hopf ring}, which we omit from the algebraic definition because they do not affect the homological algebra of modules for a Hopf ring.  They are: an element \(v \in \pi_0 E\) selects a connected component of \(\OS{E}{0}\), and there is an attached element \([v] \in E_0 \OS{E}{0}\) (i.e., the right unit structure map); a cohomology operation \(r\co E^0(-) \to E^0(-)\) induces a map \(\OS{E}{0} \to \OS{E}{0}\) and hence a map on \(E\)--homology \(r_*\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\); and, in particular, this gives a homology suspension element \(e = (e_2)_*\), where \(e_2\co E^0(-) \to E^2(-) \cong E^0(\Loops^2 -)\) is the map witnessing the \(2\)--periodicity of \(E\).}
+A \idxentry{Hopf ring} is a module equipped with structure maps \(\eps\), \(\ast\), \(\circ\), \(\Delta\), and \(\chi\), as well as unit classes \([0]\) and \([1]\) for \(\ast\) and \(\circ\) respectively, subject to the axioms described above.\footnote{Equivalently, a Hopf ring is a ring object in the category of coalgebras.  This has the virtue of concision, but taking comodules as the base category does not seem to bear much on the coming Lectures.}\footnote{There are a few more pieces of topological structure that Boardman--Johnson--Wilson call an \index{Hopf ring!enriched}\textit{enriched Hopf ring}, which we omit from the algebraic definition because they do not affect the homological algebra of modules for a Hopf ring.  They are: an element \(v \in \pi_0 E\) selects a connected component of \(\OS{E}{0}\), and there is an attached element \([v] \in E_0 \OS{E}{0}\) (i.e., the right unit structure map); a cohomology operation \(r\co E^0(-) \to E^0(-)\) induces a map \(\OS{E}{0} \to \OS{E}{0}\) and hence a map on \(E\)--homology \(r_*\co E_0 \OS{E}{0} \to E_0 \OS{E}{0}\); and, in particular, this gives a homology suspension element \(e = (e_2)_*\), where \(e_2\co E^0(-) \to E^2(-) \cong E^0(\Loops^2 -)\) is the map witnessing the \(2\)--periodicity of \(E\).}
 \end{definition}
 
 These structures are enough to pin down the behavior of both \(E_0 X\) and the unstable descent object:
@@ -104,7 +104,7 @@ Let \(E\) satisfy {\UFH}.  The associated Hopf ring \(E_0 \OS{E}{0}\) gives rise
 If an even-periodic ring spectrum \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra, the cosimplicial object \(\pi_0 \sheaf{UD}_E(X)\) is its cobar resolution under \(G\), and the \(E_2\)--page of the \index{Adams spectral sequence!unstable}unstable descent spectral sequence is presented as \[E_2^{s} = R^s\CatOf{Coalgebras}_G(E_0, E_0 X).\]
 \end{lemma}
 \begin{proof}
-For \(X\) satisfying this freeness condition, there is a splitting \[E(X) \simeq \prod_\ell \OS{E}{n_\ell} \simeq \prod_\ell \OS{E}{0},\] where the second equivalence is by even-periodicity.  Since \(E\) satisfies {\UFH}, the K\"unneth spectral sequence for the comparison map \(\prod_\ell E(\OS{E}{0}) \to E(E(X))\) collapses to an equivalence, so that \[\pi_0 E(E(X)) \cong \pi_0 \left(\prod_\ell E(\OS{E}{0})\right) \cong E_0(\OS{E}{0}) \otimes_{E_0} E(X).\]  Continuing inductively in this way, the levelwise homotopy of the entire unstable descent object \(\sheaf{UD}_E(X)\) can be identified as the cobar complex for \(G\), and the structure maps of \(\pi_0 \sheaf{UD}_E(X)[\le 2]\) endow \(E_0 X\) itself with the structure of a \(G\)--coalgebra.
+For \(X\) satisfying this freeness condition, there is a splitting \[E(X) \simeq {\prod_\ell}' \OS{E}{n_\ell} \simeq {\prod_\ell}' \OS{E}{0},\] where the second equivalence is by even-periodicity.  Since \(E\) satisfies {\UFH}, the K\"unneth spectral sequence for the comparison map \(\prod_\ell E(\OS{E}{0}) \to E(E(X))\) collapses to an equivalence, so that \[\pi_0 E(E(X)) \cong \pi_0 \left({\prod_\ell}' E(\OS{E}{0})\right) \cong E_0(\OS{E}{0}) \otimes_{E_0} E(X).\]  Continuing inductively in this way, the levelwise homotopy of the entire unstable descent object \(\sheaf{UD}_E(X)\) can be identified as the cobar complex for \(G\), and the structure maps of \(\pi_0 \sheaf{UD}_E(X)[\le 2]\) endow \(E_0 X\) itself with the structure of a \(G\)--coalgebra.
 \end{proof}
 
 At this point, it is instructive to work through an extended example to understand the kinds of objects under consideration.  At first appraisal, they appear so bottomlessly complicated that it must be hopeless to actually compute even the enriched Hopf ring associated to a spectrum \(E\).  In fact, the abundance of structure maps involved gives enough footholds that this is actually often feasible, provided we have sufficiently strong stomachs.  Our example will be the aperiodic spectrum \(E = \HFtwo\), and the place to start is with a very old result:
@@ -126,7 +126,7 @@ E^2_{*, *} \cong \Tor^{F_* \OS{E}{j}}_{*, *}(F_*, F_*) \Rightarrow F_* \OS{E}{j+
 
 That this spectral sequence is multiplicative for the \(\ast\)--product is useful enough, but the situation is actually much, much better than this:
 \begin{lemma}[{\cite[Equation 1.3]{ThomasonWilson}, \cite[Theorem 2.2]{RavenelWilsonKthyOfEMSpaces}}]\label{CircProductAndDifferentials}
-Denote by \(E^r_{*, *}(F_* \OS{E}{j})\) the spectral sequence considered above whose \(E^2\)--term is constructed from \(\Tor\) over \(F_* \OS{E}{j}\).  There are maps \[E^r_{*, *}(F_* \OS{E}{j}) \otimes_{F_*} F_* \OS{E}{m} \to E^r_{*, *}(F_* \OS{E}{j+m})\] which agree with the map \[F_* \OS{E}{j+1} \otimes_{F_*} F_* \OS{E}{m} \xrightarrow{\circ} F_* \OS{E}{j+m+1}\] on the \(E^\infty\)--page and which satisfy
+Denote by \(E^r_{*, *}(F_* \OS{E}{j})\) the spectral sequence considered above whose \(E^2\)--term is constructed from \(\Tor\) over \(F_* \OS{E}{j}\).  There are maps \[E^r_{*, *}(F_* \OS{E}{j}) \otimes_{F_*} F_* \OS{E}{m} \to E^r_{*, *}(F_* \OS{E}{j+m})\] which converge to the map \[F_* \OS{E}{j+1} \otimes_{F_*} F_* \OS{E}{m} \xrightarrow{\circ} F_* \OS{E}{j+m+1}\] on the \(E^\infty\)--page and which satisfy
 \[
 \pushQED{\qed}
 d^r(x \circ y) = (d^r x) \circ y. \qedhere
@@ -175,7 +175,7 @@ In particular, the Hopf ring is nearly \emph{free}\index{Hopf ring!free} on thes
 
 It is now instructive to try to relate this unstable computation to the stable one from \Cref{TheSteenrodAlgebraSection} (and, particularly, its algebro-geometric interpretation in \Cref{SteenrodAlgIdentifiedWithAutGa}).  Consider the situation of cohomology operations: each stable operation consists of a family of unstable operations intertwined by suspensions, each of which is additive and takes \(0\) to \(0\).  In terms of an element \(\psi \in E^* \OS{E}{j}\), such an unstable operation takes \(0\) to \(0\) exactly when it lies in the augmentation ideal, and it is additive exactly when it satisfies Hopf algebra primitivity: \[\Delta^* \psi^* = (\psi \otimes \psi)^* \Delta^*.\]
 \begin{definition}
-For a Hopf ring \(H\) with augmentation \(\eps\), we define the \textit{\(\ast\)--indecomposable quotient} by \(Q^* H = \ker \eps / (\ker \eps)^{\ast 2}\) (cf.\ \Cref{DefnOfCoTangentSpaces}).  In the setting of unstable homology cooperations, the collection of \index{operations!unstable}\textit{additive unstable cooperations} is defined as the \index{Hopf ring!star indecomposables@\(\ast\)--indecomposables}\(\ast\)--indecomposable quotient \(Q^* E_* \OS{E}{j}\).
+For a Hopf ring \(H\) with augmentation \(\eps\), we define the \textit{\(\ast\)--indecomposable quotient}, a bialgebra, by \(Q^* H = \ker \eps / (\ker \eps)^{\ast 2}\) (cf.\ \Cref{DefnOfCoTangentSpaces}).  In the setting of unstable homology cooperations, the collection of \index{operations!unstable}\textit{additive unstable cooperations} is defined as \(Q^* E_* \OS{E}{j}\).\index{Hopf ring!star indecomposables@\(\ast\)--indecomposables}
 \end{definition}
 
 We now apply this philosophy to our example:
@@ -198,7 +198,7 @@ However, exactly this complaint is eliminated by passing to the additive unstabl
 \Spec \HFtwo P_0 \HFtwo P & \cong \InternalAut{\G_a} \\
 \left(f\co \F_2[\xi_0^\pm, \xi_1, \ldots] \to R \right) & \mapsto \left(x \mapsto \sum_{j=0}^\infty f(\xi_j) x^{2^j}\right),
 \end{align*}
-The even-periodic analogue of \Cref{CalculationOfUnstableSteenrodHopfRing} presents \(\Spec \mathcal A P_0\) as the open subscheme of \(\Spec \F_2[\xi_0, \xi_1, \ldots]\) with \(\xi_0\) inverted.\footnote{Note that \(Q^* \HFtwo_* \OS{\HFtwo}{*}\) does \emph{not} form a Hopf algebra, essentially because it is missing a version of \(\chi\) that inverts \(\circ\)--multiplication.  It is remarkable that inverting the homology suspension element automatically produces an antipode.}  Hence, we see that a compatible name for the inertia group in the unstable context for \(\HFtwo P\) is\index{formal group!homomorphism}
+The even-periodic analogue of \Cref{CalculationOfUnstableSteenrodHopfRing} presents \(\Spec \mathcal A P_0\) as the open subscheme of \(\Spec \F_2[\xi_0, \xi_1, \ldots]\) with \(\xi_0\) inverted.\footnote{Note that \(Q^* \HFtwo_* \OS{\HFtwo}{*}\) does \emph{not} form a Hopf algebra, essentially because it is missing a version of \(\chi\) that inverts \(\circ\)--multiplication.  It is remarkable (and related to \Cref{FreeFormalGroupOnACurve}) that inverting the homology suspension element automatically produces an antipode.}  Hence, we see that a compatible name for the inertia group in the unstable context for \(\HFtwo P\) is\index{formal group!homomorphism}
 \begin{align*}
 \Spec Q^* \HFtwo P_0 \OS{\HFtwo P}{0} & \cong \InternalEnd{\G_a} \\
 \left(f\co \F_2[\xi_0, \xi_1, \ldots] \to R \right) & \mapsto \left(x \mapsto \sum_{j=0}^\infty f(\xi_j) x^{2^j}\right).
@@ -221,7 +221,7 @@ We say that a ring spectrum \(E\) satisfying {\UFH} furthermore satisfies the \t
 \end{definition}
 
 \begin{lemma}[{\cite[Lemma 7.5]{BCM}}]\label{ShorterUnstableResns}
-Let \(E\) be a ring spectrum satisfying {\UGH}, and let \(G\) be the comonad from \Cref{HopfRingFromOneRingSpectrum}.  The composite functor \(U = P G\) extends from a functor on free \(E_0\)--modules to all \(E_0\)--modules by using \(2\)--stage free resolutions and enforcing exactness, and the result is a comonad.  Coalgebras for this comonad are exactly comodules for the Hopf algebra of additive unstable cooperations. \qed
+Let \(E\) be a ring spectrum satisfying {\UGH}, and let \(G\) be the comonad from \Cref{HopfRingFromOneRingSpectrum}.  The composite functor \(U = P G\) extends from a functor on free \(E_0\)--modules to all \(E_0\)--modules by using \(2\)--stage free resolutions and enforcing exactness, and the result is a comonad.  Coalgebras for this comonad are exactly comodules for the bialgebra of additive unstable cooperations. \qed
 \end{lemma}
 
 \begin{corollary}[{\cite[Remark 7.8]{BCM}}]
@@ -323,7 +323,7 @@ Imposing these additional relations, we call the resulting quotient Hopf ring th
 There is a natural map \[(F_* \CP^\infty)_{F_*[E^*]}^{\circulatearrows}[E^* \CP^\infty] \to F_*(\OS{E}{*}).\]
 \end{lemma}
 \begin{proof}
-For any space \(X\), we construct a \index{Kronecker pairing}Kronecker-type pairing \[\<-,-\>\co F_n Z \times E^m Z \to F_n(\OS{E}{m})\] as follows: given a class \(f \in \pi_n F(X)\) and a class \(e\co X \to \OS{E}{m}\), we can compose the two to produce an element \(e_*(f) \in \pi_n F(\OS{E}{m})\).\footnote{This map was considered by Goerss~\cite[Proposition 10.2]{GoerssDieudonne}, who cites Strickland as inspiration.}  This pairing is ``bilinear'' in the following senses:
+For any space \(X\), we construct a \index{Kronecker pairing}Kronecker-type pairing \[\<-,-\>\co F_n X \times E^m X \to F_n(\OS{E}{m})\] as follows: given a class \(f \in \pi_n F(X)\) and a class \(e\co X \to \OS{E}{m}\), we can compose the two to produce an element \(e_*(f) \in \pi_n F(\OS{E}{m})\).\footnote{This map was considered by Goerss~\cite[Proposition 10.2]{GoerssDieudonne}, who cites Strickland as inspiration.}  This pairing is ``bilinear'' in the following senses:
 \begin{align*}
 \<a' + a'', b\> & = \<a', b\> + \<a'', b\>, &
 \<f \cdot a, b\> & = f \cdot \<a, b\>, \\
